Use beamercolorbox option colsep

--- a/PSI_test.tex
+++ b/PSI_test.tex
@@ -124,8 +124,9 @@
   You can overwrite the margins with a wide column:
   \setbeamercolor{mycolor}{fg=PSIgray, bg=structure!10}
 \begin{columns}
-  \column{1.18\linewidth}
-  \begin{beamercolorbox}[wd=1.18\textwidth, dp=0.7\textheight]{mycolor}
+  \column{1.1\linewidth}
+    We need more space:
+  \begin{beamercolorbox}[wd=\textwidth, dp=0.7\textheight, colsep*=4pt]{mycolor}
     This is a very long text that needs a lot of space this is a very long text that needs a lot of space this is a very long text that needs a lot of space
   \end{beamercolorbox}
 \end{columns}
