--- a/main.tex
+++ b/main.tex
@@ -26,7 +26,7 @@ Extension = .ttf]{aptos}
 \pgfdeclareimage[height=\paperheight]{mybackground}{PSI_Cloud_Blue}
 \pgfdeclareimage[height=0.8cm]{myLogo}{PSI_Logo_White}
 % if you use another PSI Center than EES, copy the corresponding picture out from the Powerpoint-Master-slide:
-\pgfdeclareimage[height=0.5cm]{myCenter}{Center_EES_White}
+\pgfdeclareimage[height=0.5cm]{myCenter}{Center_CEE_White}
 \pgfdeclareimage[height=0.5cm]{mySlideLogo}{PSI_Logo_black}
 
 \setbeamercolor{title}{fg=white}
