--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,5 @@
 % Compile with LuaTex or XeTex, because you need the Aptos-Font
+% If you use Overleaf, you have to change the compiler (https://www.overleaf.com/learn/how-to/Changing_compiler)
 
 % The folder "Aptos"  with the Aptos-font is required if you do not use a Windows PC, for example by using the online LaTeX-editor Overleaf.
 
@@ -113,15 +114,23 @@ Center_CEE_White}
 \setbeamercolor{block body example}{bg=PSIgreen!10,fg=black}
 \setbeamercolor{block title alerted}{bg=PSIred,fg=white}
 \setbeamercolor{block body alerted}{bg=PSIred!10,fg=black}
+\setbeamercolor{structure}{fg=PSIblue}
+\setbeamercolor{alert}{fg=PSIred}
 
 % Disable shading between block title and block content
 \makeatletter
 \pgfdeclareverticalshading[lower.bg,upper.bg]{bmb@transition}{200cm}{color(0pt)=(lower.bg); color(4pt)=(lower.bg); color(4pt)=(upper.bg)}
 \makeatother
 
-% I prefer serif math (if you do not, comment it out): 
+%% My personal suggestions:
+
+% Remove the silly "Figure" in front of a figure caption in beamer:
+\setbeamertemplate{caption}{\raggedright\insertcaption\par}
+
+% The advice to use non-serif fonts for math was from a time
+% where screen-resolution was low. With HD and UHD, this is obsolete IMHO.
 \usefonttheme[onlymath]{serif}
-% the spacing is wrong. We have to reset the letters font to T1 
+% The math spacing is wrong. We have to reset the letters font to T1 
 \AtBeginDocument{\DeclareSymbolFont{pureletters}{T1}{lmr}{\mddefault}{it}}
 
 
@@ -141,7 +150,7 @@ Center_CEE_White}
 \end{frame}
 
 
-\begin{frame}{Slide title}
+\begin{frame}{Example slide title}
 
 Formula in serif-font as in papers (can be changed in LaTeX preamble):
 \begin{equation}
@@ -176,28 +185,126 @@ Bullets are smaller than in LaTeX, and begin aligned with text:
  \end{itemize}     
 \end{itemize}
 
-\begin{itemize}
- \item <1-> Text visible on slide 1
- \item <2-> Text visible on slide 2
- \item <3>  Text visible on slide 3
- \item <4-> Text visible on slide 4
-\end{itemize}
+\end{frame}
+
+
+
+\begin{frame}{A list that is revealed}
+
+  \begin{itemize}
+  \item PSI-style 
+  \item[--]  With dash instead of bullet
+    \begin{enumerate}
+    \item Enumerated 1a
+    \item Enumerated 1b
+    \end{enumerate}
+    \pause
+  \item Item 2 (revealed on next slide)
+    \pause
+  \item Item 3
+    \begin{itemize}
+    \item Item 4
+      \begin{itemize}
+      \item Item 5
+      \end{itemize}
+    \end{itemize}
+  \end{itemize}
 
 \end{frame}
 
 
-\begin{frame}{Slide title}
 
-The PSI colors:
-\medskip
+\begin{frame}{The PSI colors}
 
-\textcolor{PSIgreen}{\rule{1cm}{1cm}}
-\textcolor{PSIyellow}{\rule{1cm}{1cm}}
-\textcolor{PSIpink}{\rule{1cm}{1cm}}
-\textcolor{PSIblue}{\rule{1cm}{1cm}}
-\textcolor{PSIred}{\rule{1cm}{1cm}}
-\textcolor{PSIviolet}{\rule{1cm}{1cm}}
+\textcolor{PSIgreen}{\rule{2cm}{1cm}}
+\textcolor{PSIyellow}{\rule{2cm}{1cm}}
+\textcolor{PSIpink}{\rule{2cm}{1cm}}
+\textcolor{PSIblue}{\rule{2cm}{1cm}}
+\textcolor{PSIred}{\rule{2cm}{1cm}}
+\textcolor{PSIviolet}{\rule{2cm}{1cm}}
 
+\end{frame}
+
+\begin{frame}[squeeze]{Titles over two lines\\ are possible}
+  Some formulas, which can be tagged, e.g.\ \thetag{$\ast$}:
+  \begin{align*}
+    \Gamma  & = \int_a^b f(x)\,dx             && \tag{$\ast$}\\
+    \sum_{n=1}^N x_{i_n} &= \Bigl(\frac{a+b}{c+d}\Bigr)\cdot \sin(x)  &&
+  \end{align*}
+  \begin{itemize}
+  \item  $\alpha = \zeta$; \texttt{\textbackslash boldsymbol}: $\boldsymbol{\alpha} = \boldsymbol{\zeta}$ 
+  \item $\mathcal{F}_t$, $\mathbb{R}^n$
+  \item $\{t \mid t=1,\dots,T\}$
+  \item $f\colon X\to Y$; $f\colon x\mapsto y$; use \texttt{\textbackslash colon}
+  \item $y_nx_n^m$ versus $y_n^{}x_n^m$
+  \end{itemize}
+   \alert{This is a frame with the usual `squeeze' option of beamer to narrow linespacing a little bit; the color of this text is called \texttt{alert} in beamer}
+  
+  \structure{This is a color predefined in beamer called \texttt{structure}}
+\end{frame}
+
+\begin{frame}{Columns and Blocks}
+
+\setbeamercolor{mycolor}{bg=gray}
+
+You can start text high with a top-aligned frame in beamer
+
+Columns:
+  \begin{columns}
+    \column[T]{.5\linewidth}
+      \begin{block}{Title of block}
+        Top-aligned block in first column
+      \end{block}
+      \begin{example}{Title of example block}
+        Block in first column
+      \end{example}
+      Text outside of block in first column
+      \vspace{1ex}
+      
+      \begin{beamercolorbox}[wd=\linewidth, colsep*=4pt]{mycolor}
+         This is a box (without title)
+       \end{beamercolorbox}
+       
+   \column[T]{.4\linewidth}
+      \begin{block}{Title in block}
+        Block in second column 
+      \end{block}
+      \begin{alertblock}{Title of alert block}
+        Block in second column
+      \end{alertblock}
+      \begin{block}{}
+        Block with empty title
+      \end{block}
+    \end{columns}
+    
+    \vspace{1ex}
+    \begin{beamercolorbox}[wd=\linewidth, colsep*=4pt]{mycolor}
+      This is a box (without title)
+    \end{beamercolorbox}
+ \end{frame}
+ 
+
+ \begin{frame}[c]{Figures, Centering}
+ A slide with vertical centering.
+ 
+  \begin{figure}
+    \includegraphics[width =.5\textwidth]{PSI_Logo_black}
+    \caption{Figures are automatically horiz.\ centered in beamer}
+    \label{fig:PSI}
+  \end{figure}
+  
+\end{frame}
+
+\begin{frame}{Overwrite the margins}
+  You can overwrite the margins with a wide column:
+  \setbeamercolor{mycolor}{fg=PSIblue, bg=structure!10}
+\begin{columns}
+  \column{1.1\linewidth}
+    We need more space:
+  \begin{beamercolorbox}[wd=\textwidth, dp=0.7\textheight, colsep*=4pt]{mycolor}
+    This is a very long text that needs a lot of space this is a very long text that needs a lot of space this is a very long text that needs a lot of space
+  \end{beamercolorbox}
+\end{columns}
 \end{frame}
 
 
